<resources>
    <string name="app_name">Recordy</string>
    <string name="title_activity_add_new_record_fragment" translatable="false">AddNewRecordFragment</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="menu_item_clients">Clients</string>
    <string name="menu_item_procedures">Procedures</string>
    <string name="menu_item_records">Records</string>
    <string name="view_navigation_open" translatable="false">Open</string>
    <string name="view_navigation_close" translatable="false">close</string>
    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="duration_hint">Duration</string>
    <string name="menu_item_calendar">Calendar</string>
    <string name="phone_hint">Phone</string>
    <string name="your_records_will_be_here">Your records will be here</string>
    <string name="there_will_be_list_of_procedures">There will be list of procedures</string>
    <string name="currency">dollars</string>
    <string name="record_added">Record added</string>
    <string name="settings">Settings</string>
    <string name="working_time">Working time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="there_will_be_list_of_clients">There will be list of clients</string>
    <string name="calendar">Calendar</string>
    <string name="clients">Clients</string>
    <string name="procedures">Procedures</string>
    <string name="records">Records</string>
    <string name="add_new_record">Add new record</string>
    <string name="add_new_procedure">Add new procedure</string>
    <string name="zoom_out">Zoom out</string>
    <string name="zoom_in">zoom_in</string>
    <string name="procedures_choice">Procedures Choice</string>
    <string name="ok">Ok</string>
    <string name="add_procedures">Add procedures</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string-array name="minutes_labels">
        <item>10 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>50 minutes</item>
        <item>1 hour</item>
        <item>1 hour 10 minutes</item>
        <item>1 hour 20 minutes</item>
        <item>1 hour 30 minutes</item>
        <item>2 hours</item>
        <item>2 hours 30 minutes</item>
        <item>3 hours</item>
    </string-array>
</resources>
