<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/clients_fragment"
            android:icon="@drawable/ic_clients"
            android:title="@string/menu_item_clients" />
        <item
            android:id="@+id/procedures_fragment"
            android:icon="@drawable/ic_procedures"
            android:title="@string/menu_item_procedures" />
        <item
            android:id="@+id/records_fragment"
            android:icon="@drawable/ic_records"
            android:title="@string/menu_item_records" />
        <item
            android:id="@+id/calendar_fragment"
            android:icon="@drawable/ic_events"
            android:title="@string/menu_item_calendar" />
    </group>
</menu>